# offerpilot-ai

./: .gitignore  LICENSE  README.md  README_en.md  README_zh.md  portals_agent.yml  portals_cn.yml  pyproject.toml  sample_job.docx  sample_job.md  sample_resume.docx  sample_resume.md  start.sh
docs/: migration.md
docs/superpowers/plans/: 2026-04-20-product-research.md
docs/superpowers/specs/: 2026-04-14-gitignore-and-pipeline-scoring-design.md  2026-04-15-mock-interview-design.md  2026-04-20-product-research-design.md
offerpilot/: __init__.py  agent.py  cli.py  config.py  cover.py  export.py  graph.py  intent.py  io.py  llm.py  resume.py  script_loader.py  state.py  tools.py
skill-pack/: DATASTORE.md  EVALUATION.md  INPUTS.md  JD_MATCHING.md  MOCK_INTERVIEW.md  OUTPUTS.md  OUTREACH.md  PRODUCT_RESEARCH.md  PROMPTS.md  README.md  TRACKER.md  WORKFLOW.md
skill-pack/adapters/claude-code/: SKILL.md
skill-pack/adapters/codex/: SKILL.md
skill-pack/adapters/cursor/: SKILL.md
skill-pack/data/: skill_aliases.zh-en.json
skill-pack/examples/: cover-letter.md  jd-fit-zh.md  profile_store_example.yaml  resume-optimization.md  targeted-resume.md
skill-pack/schemas/: profile_store.schema.json  skill_aliases.schema.json
skill-pack/scripts/: README.md  extract_text.py  render_pdf.py  run_pipeline.py  scan_portals.py  validate_aliases.py  validate_inputs.py  validate_outputs.py  validate_profile_store.py
skill-pack/templates/: profile_store.yaml
tests/: test_agent_routing.py  test_cover.py  test_export.py  test_io.py  test_llm.py  test_resume.py  test_skill_pack_integration.py  test_validators.py
web/: README.md
web/api/: main.py  requirements.txt
web/api/routes/: chat.py  files.py  tracker.py
web/frontend/lib/: api.ts  (+1 more)
(+6 files in other folders)
