[project]
name = "offerpilot"
version = "0.1.0"
description = "Skill-first workflow pack for resume diagnosis, JD fit analysis, targeted rewrites, and cover letters."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai",
    "playwright",
    "pypdf",
    "PyYAML",
    "python-docx",
    "reportlab",
]

[project.scripts]
offerpilot = "offerpilot.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
